fix cover__description word-spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -94,7 +94,7 @@
   font-size: 22px;
   line-height: 127%;
   text-transform: uppercase;
-  word-spacing: 18px;
+  word-spacing: 19px;
 }
 
 .bet-button {
